Add support for ADDIONAL_LUNUX_IMAGE_PACKAGES

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ BASE_ANDROID_SDK_IMAGE=cirrusci/android-sdk:30
 BASE_IMAGE=example.registry.com/project/flutter-base-1
 LINUX_IMAGE=example.registry.com/project/flutter-linux-1
 ANDROID_IMAGE=example.registry.com/project/flutter-android-1
+ADDIONAL_LUNUX_IMAGE_PACKAGES=libsecret-1-0
